- fix player colours in multiplayer demos
- apply workarounds for buggy pwads even during demo playback
- fix numpad 5 key
- allow compilation on systems where SDL is built without joystick support
- fix comp_skymap
- using anisotropic filtering when the OpenGL extension is available
- using paletted textures when the OpenGL extension is available
- using shared texture palette when the OpenGL extension is available

Changes from v2.2.1 to v2.2.2
- more demo sync problems for original Doom and Boom fixed
- added changeable samplerate for soundmixing
- added fullscreen/window toggle in option menu
- added double buffering
- floor rendering made more accurate
- Win32 config file handling fixed
- fix endian conversion problem on Linux/PPC

Changes from v2.2.0 to v2.2.1
- improved fix for demo sync problems with lost souls bouncing off floors
- fixed bug where loading a -fast or -respawn savegame failed to restore
  those options properly 
- fixed demo sync bug with doors also tagged to lift triggers
- fix some endianness problems in the OpenGL renderer
- hopefully fixed some problems compiling for Linux/ARM
- fix multi-level demo time totals to agree with compet-n
- linux rpm is now a bit more standardised

Changes from v2.1.2 to v2.2.0
- fix compiling problem on alpha processors (size_t != unsigned long)
- fixed stair building (ex. TNT - Evilution MAP30)
- fixed OpenGL menu drawing bug
- hopefully fixed top sky line bug for some OpenGL drivers
- added joystick support through SDL
- made a (temporary) fix for the crash at 800x600 when timidity can't find cfg
- fixed some key binding problems
- fixed linking problems on some UNIX systems

Changes from v2.1.1 to v2.1.2
- fix problem with sound stereo
- fix problem with new network games
- supports demo files with base name >8 characters
- enable IDDT and other display cheats in demo playback
- various fixes for running on Solaris/sparc

Changes from v2.1.0 to v2.1.1